# r3l3453

./: README.rst  pyproject.toml  r3l3453.json  release.py  setup.cfg  setup.py
r3l3453/: __init__.py
r3l3453/cookiecutter/hooks/: post_gen_project.py
r3l3453/cookiecutter/{{cookiecutter.project_name}}/: pyproject.toml  pyproject_template.toml
release/: __init__.py  __main__.py
tests/: test___init__.py
