[build-system]
requires = ['uv_build>=0.8.3,<0.9.0']
build-backend = 'uv_build'

[project]
version = "0.58.0"
name = 'r3l3453'
description = 'Bump version, tag, commit, release to pypi, bump again, and push.'
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Topic :: Software Development',
]
# required for nested f-strings
requires-python = '>=3.14'
dependencies = [
    'cyclopts',
    'cookiecutter',
    'tomlkit',
    "applog>=0.1",
]


[project.license]
text = 'GNU General Public License v3 (GPLv3)'

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[project.urls]
GitHub = 'https://github.com/5j9/r3l3453'

[project.scripts]
r3l3453 = 'r3l3453.__init__:app'

[[project.authors]]
name = '5j9'
email = '5j9@users.noreply.github.com'

[tool.uv.build-backend]
module-name = "r3l3453"
module-root = ""


[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'W605', # invalid-escape-sequence
    'FA',   # flake8-future-annotations
    'I',    # isort
    'UP',   # pyupgrade
    'RUF',  # Ruff-specific rules (RUF)
]
lint.ignore = [
    'E721',   # Do not compare types, use `isinstance()`
    'RUF001', # ambiguous-unicode-character-string
    'RUF002', # ambiguous-unicode-character-docstring
    'RUF003', # ambiguous-unicode-character-comment
    'RUF012', # mutable-class-default
    'RUF059', # Unpacked variable never used
]

[tool.pytest]
addopts = ["--quiet", "--tb=short"]
truncation_limit_lines = '0'
truncation_limit_chars = '0'

[tool.pyright]
typeCheckingMode = 'standard'
reportDeprecated = "warning"
reportPropertyTypeMismatch = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnnecessaryTypeIgnoreComment = true
reportConstantRedefinition = 'error'
reportTypeCommentUsage = 'warning'
reportUnnecessaryComparison = 'warning'
reportInvalidStringEscapeSequence = false
venvPath = "."
venv = ".venv"
