[build-system]
requires = [
    'setuptools>=66.1.0',
    'wheel',
]

build-backend = 'setuptools.build_meta'

[project]
name = '{{cookiecutter.project_name}}'
authors = [
    { name = '5j9', email = '5j9@users.noreply.github.com' },
]
description = '{{cookiecutter.description}}'
readme = 'README.rst'
requires-python = '>={{cookiecutter.requires_python}}'
dependencies = []
dynamic = ['version']
license = {text = "{{cookiecutter.license}}"}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = '{{cookiecutter.project_name}}.__version__'

[tool.ruff]
line-length = 79
format.quote-style = 'single'
isort.combine-as-imports = true
extend-select = [
    'I',  # isort
    'UP',  # pyupgrade
]
ignore = [
    'UP027',  # list comprehensions are faster than generator expressions
    'E721',  # Do not compare types, use `isinstance()`
]


[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
